Disconnect Button + Bloodhound OK

--- a/templates/popup.html
+++ b/templates/popup.html
@@ -45,26 +45,9 @@
         #disconnect-btn{
             top:15px;
             right:65px;
+            margin-top: 2px;
             position: absolute;
         }
-        /*
-        .input-field input[type=text]:focus + label,
-        .input-field input[type=password]:focus + label {
-            color: #e91e63;
-        }
-        .input-field input[type=text]:focus,
-        .input-field input[type=password]:focus {
-            border-bottom: 2px solid #e91e63;
-            box-shadow: none;
-        }
-        #signup_link {
-            margin-top: 1em;
-            display: block;
-        }
-        #formtitle {
-            margin: 1.5em 0;
-        }
-        */
     </style>
 </head>
 
