Async Auth Token Issue Fixed

--- a/templates/popup.html
+++ b/templates/popup.html
@@ -48,6 +48,9 @@
             margin-top: 2px;
             position: absolute;
         }
+        .materialize-tags .tt-menu {
+            font-size: 14px;
+        }
     </style>
 </head>
 
