AutoClosing after submission added

--- a/templates/popup.html
+++ b/templates/popup.html
@@ -90,7 +90,7 @@
                                         <div class="switch m-b-md">
                                             <label>
                                                 <span class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Link Visible:</span>
-                                                <input type="checkbox" id="link-visible" name="link-visible"  data-init="true">
+                                                <input type="checkbox" id="visibility" name="visibility"  data-init="">
                                                 <span class="lever"></span>
                                             </label>
                                         </div>
@@ -145,7 +145,7 @@
                                         <div class="switch m-b-md">
                                             <label>
                                                 <span class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Title Auto Format:</span>
-                                                <input type="checkbox" id="auto-format" name="auto-format" data-init="false">
+                                                <input type="checkbox" id="autoformat" name="autoformat" data-init="false">
                                                 <span class="lever"></span>
                                             </label>
                                         </div>
