--- a/templates/login.html
+++ b/templates/login.html
@@ -8,12 +8,22 @@
     <link rel="stylesheet" href="/plugins/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style>
-        main {
-            padding: 2em;
-            flex: 1 0 auto;
-            background: white;
-            border-radius: 40px;
+        /*
+        body {
+            width: 600px;
+            height: 600px;
+            left: calc(50% - 300px);
+            top: calc(50% - 300px);
+            position: absolute;
+            background-color:transparent;
+            font-size: 12px;
         }
+        main{
+            top: 0px;
+            left: 0px;
+            position: absolute;
+        }
+        */
         body {
             background: #fff;
             width: 600px;
@@ -22,6 +32,24 @@
             top: calc(50% - 300px);
             position: absolute;
             background-color:transparent;
+            font-size: 12px;
+        }
+        main {
+            top: 0px;
+            left: 0px;
+            position: absolute;
+            /*flex: 1 0 auto;*/
+            background: white;
+            border-radius: 40px;
+        }
+        .card {
+            padding: 2em;
+            flex: 1 0 auto;
+            background: white;
+            border-radius: 40px;
+            width: 600px;
+            height: 600px;
+            margin: 0px;
         }
         .input-field input[type=text]:focus + label,
         .input-field input[type=password]:focus + label {
@@ -53,46 +81,49 @@
 <body>
 
     <main>
-        <center>
-            <a id="close-btn" class="btn-floating red"><i class="material-icons">close</i></a>
-            <img class="responsive-img" style="width: 200px;" src="https://feedcrunch.s3.amazonaws.com/static/images/logo-dark.png" />
-            <h5 class="indigo-text" id="formtitle">Please, login into your account</h5>
-            <div class="container">
-                <div class="z-depth-1 grey lighten-4 row" style="width: 100%; display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-                    <form id="login_form">
-                        <div class='row'>
-                            <div class='input-field col s12'>
-                                <input class='validate col s12' type='text' name='username' id='username' />
-                                <label for='username'>Enter your username</label>
-                                <div id="username-error" class="help-inline col s12"></div>
-                            </div>
-                        </div>
-                        <div class='row'>
-                            <div class='input-field col s12'>
-                                <input class='validate col s12' type='password' name='password' id='password' />
-                                <label for='password'>Enter your password</label>
-                                <div id="password-error" class="help-inline col s12"></div>
-                            </div>
-                            <label style='float: right;'>
-                                <a class='pink-text' href='#!'><b>Forgot Password?</b></a>
-                            </label>
-                        </div>
+        <div class="card">
+            <div class="card-content">
+                <center>
+                    <a id="close-btn" class="btn-floating red"><i class="material-icons">close</i></a>
+                    <img class="responsive-img" style="width: 200px;" src="https://feedcrunch.s3.amazonaws.com/static/images/logo-dark.png" />
+                    <h5 class="indigo-text" id="formtitle">Please, login into your account</h5>
+                    <div class="container">
+                        <div class="z-depth-1 grey lighten-4 row" style="width: 100%; display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+                            <form id="login_form" accept-charset="utf-8">
+                                <div class='row'>
+                                    <div class='input-field col s12'>
+                                        <input class='validate col s12' type='text' name='username' id='username' />
+                                        <label for='username'>Enter your username</label>
+                                        <div id="username-error" class="help-inline col s12"></div>
+                                    </div>
+                                </div>
+                                <div class='row'>
+                                    <div class='input-field col s12'>
+                                        <input class='validate col s12' type='password' name='password' id='password' />
+                                        <label for='password'>Enter your password</label>
+                                        <div id="password-error" class="help-inline col s12"></div>
+                                    </div>
+                                    <label style='float: right;'>
+                                        <a class='pink-text' href='#!'><b>Forgot Password?</b></a>
+                                    </label>
+                                </div>
 
-                        <center>
-                            <div class='row'>
-                                <button id='btn_login' class='col s12 btn btn-large waves-effect indigo'>Login</button>
-                            </div>
-                        </center>
-                    </form>
-                </div>
+                                <center>
+                                    <div class='row'>
+                                        <button id='btn_login' class='col s12 btn btn-large waves-effect indigo'>Login</button>
+                                    </div>
+                                </center>
+                            </form>
+                        </div>
+                    </div>
+                    <a href="#" id="signup_link">Create account</a>
+                </center>
             </div>
-            <a href="https://www.feedcrunch.io/signup/" id="signup_link">Create account</a>
-        </center>
+        </div>
     </main>
 
     <script src="/plugins/js/jquery.min.js"></script>
     <script src="/plugins/js/jquery.validate.min.js"></script>
-    <script src="/plugins/js/cookies.min.js"></script>
     <script src="/plugins/js/materialize.min.js"></script>
     <script src="/js/login.js"></script>
 </body>
