Extension can detect when a RSS/ATOM feed is present and allow you to subscribe when you want

--- a/templates/login.html
+++ b/templates/login.html
@@ -125,6 +125,8 @@
     <script src="/plugins/js/jquery.min.js"></script>
     <script src="/plugins/js/jquery.validate.min.js"></script>
     <script src="/plugins/js/materialize.min.js"></script>
+
+    <script src="/js/generic_btn_actions.js"></script>
     <script src="/js/login.js"></script>
 </body>
 
