Button to open Admin Panel and Personal Feed Added.

--- a/templates/submit_article.html
+++ b/templates/submit_article.html
@@ -63,6 +63,18 @@
             margin-top: 2px;
             position: absolute;
         }
+        #my_feed-btn{
+            top:15px;
+            left:250px;
+            margin-top: 2px;
+            position: absolute;
+        }
+        #admin_panel-btn{
+            top:15px;
+            left:65px;
+            margin-top: 2px;
+            position: absolute;
+        }
         .materialize-tags .tt-menu {
             font-size: 14px;
         }
@@ -77,6 +89,7 @@
                 <form id="add-form" action="#">
                     <h3>Submit a new Article</h3>
                     <a id="close-btn" class="btn-floating red"><i class="material-icons">close</i></a>
+
                     <a id="disconnect-btn" class="waves-effect waves-light btn red">
                         <i class="material-icons left">exit_to_app</i>
                         Disconnect
@@ -84,6 +97,15 @@
                     <a id="subscribe-btn" class="waves-effect waves-light btn orange darken-3 disabled">
                         <i class="material-icons left">rss_feed</i>
                         Subscribe to RSS Feed
+                    </a>
+
+                    <a id="my_feed-btn" class="waves-effect waves-light btn teal lighten-2">
+                        <i class="material-icons left">open_in_new</i>
+                        Open My Feed
+                    </a>
+                    <a id="admin_panel-btn" class="waves-effect waves-light btn indigo lighten-2">
+                        <i class="material-icons left">account_circle</i>
+                        Admin Panel
                     </a>
 
                     <section>
