CSS Fix due to the update of materialize

--- a/templates/submit_article.html
+++ b/templates/submit_article.html
@@ -9,76 +9,10 @@
     <link rel="stylesheet" href="/plugins/css/materialize-tags.min.css">
     <link rel="stylesheet" href="/plugins/css/sweetalert2.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <style>
-        body {
-            left: calc(50% - 600px);
-            top: calc(50% - 300px);
-            width: 1200px;
-            height: 600px;
-            position: absolute;
-            background-color:transparent;
-            font-size: 12px;
-        }
-        main{
-            top: 0px;
-            left: 0px;
-            position: absolute;
-        }
-        .card {
-            padding: 2em;
-            flex: 1 0 auto;
-            background: white;
-            border-radius: 40px;
-            width: 1200px;
-            height: 600px;
-            margin: 0px;
-        }
-        .m-b-md{
-            padding: 1em 0;
-        }
-        .materialize-tags .tt-input {
-            border-bottom: none;
-            box-shadow: none;
-        }
-        #btn-row{
-            padding-top: 4em;
-        }
-        #switch-row{
-            margin: 0;
-        }
-        #close-btn{
-            top:15px;
-            right:15px;
-            position: absolute;
-        }
-        #subscribe-btn{
-            top:15px;
-            right:250px;
-            margin-top: 2px;
-            position: absolute;
-        }
-        #disconnect-btn{
-            top:15px;
-            right:65px;
-            margin-top: 2px;
-            position: absolute;
-        }
-        #my_feed-btn{
-            top:15px;
-            left:250px;
-            margin-top: 2px;
-            position: absolute;
-        }
-        #admin_panel-btn{
-            top:15px;
-            left:65px;
-            margin-top: 2px;
-            position: absolute;
-        }
-        .materialize-tags .tt-menu {
-            font-size: 14px;
-        }
-    </style>
+
+    <link rel="stylesheet" href="/css/generic_style.css">
+    <link rel="stylesheet" href="/css/submit_article.css">
+
 </head>
 
 <body>
