--- a/templates/subscribe_to_feed.html
+++ b/templates/subscribe_to_feed.html
@@ -9,54 +9,10 @@
     <link rel="stylesheet" href="/plugins/css/materialize-tags.min.css">
     <link rel="stylesheet" href="/plugins/css/sweetalert2.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <style>
-        body {
-            left: calc(50% - 600px);
-            top: calc(50% - 250px);
-            width: 1200px;
-            height: 500px;
-            position: absolute;
-            background-color:transparent;
-            font-size: 12px;
-        }
-        main{
-            top: 0px;
-            left: 0px;
-            position: absolute;
-        }
-        .card {
-            padding: 2em;
-            flex: 1 0 auto;
-            background: white;
-            border-radius: 40px;
-            width: 1200px;
-            height: 500px;
-            margin: 0px;
-        }
-        #close-btn{
-            top:15px;
-            right:15px;
-            position: absolute;
-        }
-        #return_to_submit-btn{
-            top:15px;
-            right:250px;
-            margin-top: 2px;
-            position: absolute;
-        }
-        #disconnect-btn{
-            top:15px;
-            right:65px;
-            margin-top: 2px;
-            position: absolute;
-        }
-        #subscribe-form{
-            padding-top: 25px;
-        }
-        #btn-row{
-            padding-top: 15px;
-        }
-    </style>
+
+    <link rel="stylesheet" href="/css/generic_style.css">
+    <link rel="stylesheet" href="/css/subscribe_to_feed.css">
+
 </head>
 
 <body>
