Switches not functioning fixed. Label font size fixed Version 1.0.10 release

--- a/templates/submit_article.html
+++ b/templates/submit_article.html
@@ -60,7 +60,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="input-field col s12 m6 l3">
+                                    <div class="col s12 m6 l3">
                                         <!-- Switch -->
                                         <div class="switch m-b-md">
                                             <label>
@@ -70,9 +70,9 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="input-field col s12 m6 l6" id="switch-row">
+                                    <div class="col s12 m6 l6" id="switch-row">
 
-                                            <div class="input-field col s12 m6 l6">
+                                            <div class="col s12 m6 l6">
                                                 <!-- Switch -->
                                                 <div class="switch m-b-md">
                                                     <label>
@@ -83,7 +83,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="input-field col s12 m6">
+                                            <div class="col s12 m6">
                                                 <!-- Switch -->
                                                 <div class="switch m-b-md">
                                                     <label>
@@ -94,7 +94,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="input-field col s12 m6">
+                                            <div class="col s12 m6">
                                                 <div class="switch m-b-md">
                                                     <label>
                                                         <span class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Publish on LinkedIn:</span>
@@ -104,7 +104,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="input-field col s12 m6">
+                                            <div class="col s12 m6">
                                                 <div class="switch m-b-md">
                                                     <label>
                                                         <span class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Publish on Slack:</span>
@@ -115,7 +115,7 @@
                                             </div>
 
                                     </div>
-                                    <div class="input-field col s12 m6 l3" >
+                                    <div class="col s12 m6 l3" >
                                         <!-- Switch -->
                                         <div class="switch m-b-md">
                                             <label>
